// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GiveReviewTemplate returns <Error /> component based on state 1`] = `
<div
  className="one-whole one-half@palm-wide-and-up"
  style={
    Object {
      "margin": "0 auto",
    }
  }
>
  <Err
    additionalMessage="Please click 'Done' in the top left of your screen to get back to the app"
    msg="must go faster!"
  />
</div>
`;

exports[`GiveReviewTemplate returns <Layout /> component based on state 1`] = `
<Layout
  data={
    Object {
      "payment": Object {
        "icon": "Visa",
        "type": "cc",
      },
      "personal": Object {
        "campus": "Web",
        "campusId": 20,
        "email": "web@newspring.cc",
        "firstName": "Jeff",
        "lastName": "Goldblumm",
      },
    }
  }
  onSubmit={[Function]}
  savedAccount={
    Object {
      "date": null,
      "id": 18376,
      "name": "Jeff%27s%20NS%20Visa",
      "payment": Object {
        "accountNumber": "411111******1112",
        "paymentType": "Visa",
      },
    }
  }
  state="done"
  total={1}
  transactions={
    Object {
      "125": Object {
        "label": "General%20Fund",
        "value": 1,
      },
    }
  }
  url={false}
  userId="jY4RT2WK55yKYtj4y"
/>
`;

exports[`GiveReviewTemplate returns <Loading /> component based on state 1`] = `
<div
  className="fixed-ends fixed-sides"
>
  <Loading
    msg="We're Processing Your Contribution"
  />
  ;
</div>
`;

exports[`GiveReviewTemplate returns <Success /> component based on state 1`] = `
<div
  className="one-whole one-half@palm-wide-and-up"
  style={
    Object {
      "margin": "0 auto",
    }
  }
>
  <Success
    additionalMessage="Please click 'Done' in the top left of your screen to get back to the app"
    email="web@newspring.cc"
    guest={false}
    onClick={[Function]}
    schedule={
      Object {
        "frequency": null,
        "start": null,
      }
    }
    total="$1.00"
  />
</div>
`;
